--- a/index.html
+++ b/index.html
@@ -2302,6 +2302,9 @@
             <li>
               <a href="#conBre"><span>continue break</span></a>
             </li>
+            <li>
+              <a href="#xunHuanZuoYie"><span>课后作业</span></a>
+            </li>
           </ul>
           <h1>1. 循环</h1>
           <h2 class="bold">1.1 循环目的</h2>
@@ -2343,6 +2346,9 @@
             </li>
             <li>
               <a href="#conBre"><span>continue break</span></a>
+            </li>
+            <li>
+              <a href="#xunHuanZuoYie"><span>课后作业</span></a>
             </li>
           </ul>
           <h1>2. for 循环</h1>
@@ -2569,6 +2575,9 @@
             <li>
               <a href="#conBre"><span>continue break</span></a>
             </li>
+            <li>
+              <a href="#xunHuanZuoYie"><span>课后作业</span></a>
+            </li>
           </ul>
           <h1>3. 双重 for 循环</h1>
           <h2>3.1 双重 for 循环概述</h2>
@@ -2722,6 +2731,9 @@
             <li>
               <a href="#conBre"><span>continue break</span></a>
             </li>
+            <li>
+              <a href="#xunHuanZuoYie"><span>课后作业</span></a>
+            </li>
           </ul>
           <h1>4. while 循环</h1>
           <p>
@@ -2797,6 +2809,9 @@
             </li>
             <li>
               <a href="#conBre"><span>continue break</span></a>
+            </li>
+            <li>
+              <a href="#xunHuanZuoYie"><span>课后作业</span></a>
             </li>
           </ul>
           <h1>5. do while 循环</h1>
@@ -2907,6 +2922,9 @@
                 ><span class="color-red">continue break</span></a
               >
             </li>
+            <li>
+              <a href="#xunHuanZuoYie"><span>课后作业</span></a>
+            </li>
           </ul>
           <h1>6. continue break</h1>
           <h2>6.1 continue 关键字</h2>
@@ -2964,6 +2982,34 @@
         </section>
         <hr />
         <section id="xunHuanZuoYie">
+          <p>目录介绍：</p>
+          <ul>
+            <li>
+              <a href="#XunHuan"><span>循环</span></a>
+            </li>
+            <li>
+              <a href="#forXunHuan"><span>for 循环</span></a>
+            </li>
+            <li>
+              <a href="#shuanChongFor"><span>双重 for 循环</span></a>
+            </li>
+            <li>
+              <a href="#whileXunHuan"><span>while 循环</span></a>
+            </li>
+            <li>
+              <a href="#doWhileXunHuan"><span>do while 循环</span></a>
+            </li>
+            <li>
+              <a href="#conBre"><span>continue break</span></a>
+            </li>
+            <li>
+              <a href="#xunHuanZuoYie"
+                ><span class="color-red">课后作业</span></a
+              >
+            </li>
+          </ul>
+
+          <h1>7. 作业</h1>
           <p>1. 求1-100之间所有数的总和与平均值</p>
           <p>2. 求1-100之间所有偶数的和</p>
           <p>3. 求100以内7的倍数的总和</p>
