--- a/index.html
+++ b/index.html
@@ -3850,7 +3850,7 @@
               <a href="#hanShuChanShu"><span>函数的参数</span></a>
             </li>
             <li>
-              <a href="#hanShuFanHuiZhi"><span>函数的返回值</span></a>
+              <a href="#hanShuFanHuiZhi"><span>函数的返回值 return</span></a>
             </li>
             <li>
               <a href="#argumentsShiYong"><span>arguments的使用</span></a>
