--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <li>
           <a class="nav-link" href="#jsHanShu">11-函数</a>
         </li>
-        <li><a class="nav-link" href="#while_statement">12</a></li>
+        <li><a class="nav-link" href="#jsZuoYongYu">12-作用域</a></li>
         <li>
-          <a class="nav-link" href="#Function_declarations">13</a>
+          <a class="nav-link" href="#jsYuJieXi">13-预解析</a>
         </li>
         <li><a class="nav-link" href="#Reference">14</a></li>
       </ul>
@@ -635,6 +635,16 @@
             多个变量名之间使用英文逗号隔开。
           </p>
           <code>var age = 10, name = 'zs', sex = 2; </code>
+          <h3>（扩展）区别 var a = 9, b = 9, c = 9; 和 var a = b = c = 9;</h3>
+          <p>
+            在<a href="#yuJieXiAnLi-4"><u>13-预解析--预解析案例-案例4</u></a
+            >中里面有一种声明：var a = b = c = 9; 注意它并没有用英文逗号分开，
+            <br />
+            这个相当于是 var a = 9; b = 9; c = 9;<br />
+            也就是说b 和 c 直接赋值，没有var声明，所以b 和c
+            当作全局变量来看。<br />
+            而不是上面的集体声明 var a = 9, b = 9, c = 9;
+          </p>
           <h2>3.3 声明变量特殊情况</h2>
           <table>
             <tr>
@@ -4561,12 +4571,398 @@
       </div>
       <hr />
       <hr />
-      <section class="main-section" id="while_statement">
-        <header>12</header>
-      </section>
-      <section class="main-section" id="Function_declarations">
-        <header>13</header>
-      </section>
+      <div class="main-section" id="jsZuoYongYu">
+        <header>12-JavaScript 作用域</header>
+        <section id="zuoYongYu">
+          <p>目录介绍：</p>
+          <ul>
+            <li>
+              <a href="#zuoYongYu"><span class="color-red">作用域</span></a>
+            </li>
+            <li>
+              <a href="#bianLianZuoYongYu"><span>变量的作用域</span></a>
+            </li>
+            <li>
+              <a href="#zuoYongYuLian"><span>作用域链</span></a>
+            </li>
+          </ul>
+          <h1>1. 作用域</h1>
+          <h2>1.1 作用域概述</h2>
+          <p>
+            通常来说，一段程序代码中所用到的名字并不总是有效和可用的，而限定这个名字的
+            <span class="color-red">可用性的代码范围</span>就是这个名字的<span
+              class="color-red bold"
+              >作用域。</span
+            >作用域的使用提高了程序逻辑的局部性，增强了程序的可靠性，减少了名字冲突。
+          </p>
+          <p>JavaScript（es6前）中的作用域有两种：</p>
+          <ul>
+            <li>全局作用域</li>
+            <li>局部作用域（函数作用域）</li>
+          </ul>
+          <h2>1.2 全局作用域</h2>
+          <p>
+            作用于所有代码执行的环境(整个 script 标签内部)或者一个独立的 js
+            文件。
+          </p>
+          <h2>1.3 局部作用域 （函数作用域）</h2>
+          <p>
+            作用于函数内的代码环境，就是局部作用域。
+            因为跟函数有关系，所以也称为函数作用域。
+          </p>
+          <img src="./images/12-作用域/代码-js作用域.png" alt="" />
+          <h2>1.4 JS 没有块级作用域</h2>
+          <ul>
+            <li>块作用域由 { } 包括。</li>
+            <li>
+              在其他编程语言中（如 java、c#等），在 if
+              语句、循环语句中创建的变量，仅仅只能在本 if
+              语句、本循环语句中使用，如下面的Java代码：
+            </li>
+          </ul>
+          <pre>
+            <code>if(true){
+                  int num = 123;
+                  system.out.print(num);  // 123
+                }
+                system.out.print(num);     // 报错</code>
+          </pre>
+          <p>Js中没有块级作用域（在ES6之前）。</p>
+          <pre>
+            <code>if(true){
+                  var num = 123;
+                  console.log(123); //123
+                }
+                console.log(123);   //123</code>
+          </pre>
+          <img src="./images/12-作用域/代码-块级作用域.png" alt="" />
+        </section>
+        <section id="bianLianZuoYongYu">
+          <p>目录介绍：</p>
+          <ul>
+            <li>
+              <a href="#zuoYongYu"><span>作用域</span></a>
+            </li>
+            <li>
+              <a href="#bianLianZuoYongYu"
+                ><span class="color-red">变量的作用域</span></a
+              >
+            </li>
+            <li>
+              <a href="#zuoYongYuLian"><span>作用域链</span></a>
+            </li>
+          </ul>
+          <h1>2. 变量的作用域</h1>
+          <h2>2.1 变量作用域的分类</h2>
+          <p>在JavaScript中，根据作用域的不同，变量可以分为两种：</p>
+          <ul>
+            <li>全局变量</li>
+            <li>局部变量</li>
+          </ul>
+          <h2>2.2 全局变量</h2>
+          <p>
+            在全局作用域下声明的变量叫做
+            <span class="color-red bold">全局变量 </span>（<span
+              class="color-red"
+              >在函数外部定义的变量</span
+            >）。
+          </p>
+          <ul>
+            <li>全局变量在代码的任何位置都可以使用</li>
+            <li>在全局作用域下 var 声明的变量 是全局变量</li>
+            <li>
+              特殊情况下，在函数内不使用 var
+              声明的变量也是全局变量（不建议使用）
+            </li>
+          </ul>
+          <h2>2.3 局部变量</h2>
+          <p>
+            在局部作用域下声明的变量叫做
+            <span class="color-red bold">局部变量 </span>（<span
+              class="color-red"
+              >在函数内部定义的变量</span
+            >）。
+          </p>
+          <ul>
+            <li>
+              局部变量只能在该函数<span class="color-red bold">内部使用</span>
+            </li>
+            <li>在函数内部 var 声明的变量是局部变量</li>
+            <li>
+              函数的<span class="color-red bold">形参</span>实际上就是局部变量
+            </li>
+          </ul>
+          <h2>2.4 全局变量和局部变量的区别</h2>
+          <ul>
+            <li>
+              全局变量：在任何一个地方都可以使用，只有在浏览器关闭时才会被销毁，因此比较占内存
+            </li>
+            <li>
+              局部变量：只在函数内部使用，当其所在的代码块被执行时，会被初始化；当代码块运行结束后，就会被销毁，因此更节省内存空间
+            </li>
+          </ul>
+          <img src="./images/12-作用域/代码-变量作用域.png" alt="" />
+        </section>
+        <section id="zuoYongYuLian">
+          <p>目录介绍：</p>
+          <ul>
+            <li>
+              <a href="#zuoYongYu"><span>作用域</span></a>
+            </li>
+            <li>
+              <a href="#bianLianZuoYongYu"><span>变量的作用域</span></a>
+            </li>
+            <li>
+              <a href="#zuoYongYuLian"
+                ><span class="color-red">作用域链</span></a
+              >
+            </li>
+          </ul>
+          <h1>3. 作用域链</h1>
+          <ul>
+            <li>只要是代码，就至少有一个作用域</li>
+            <li>写在函数内部的局部作用域</li>
+            <li>
+              如果函数中还有函数，那么在这个作用域中就又可以诞生一个作用域
+            </li>
+            <li>
+              根据在内部函数可以访问外部函数变量的这种机制，用链式查找决定哪些数据能被内部函数访问，就称作作用域链
+            </li>
+          </ul>
+          <img src="./images/12-作用域/代码-作用域链.png" alt="" />
+          <h3 class="color-red">案例 1： 结果是几？</h3>
+          <pre>
+            <code>function f1() {
+                  var num = 123;
+                  function f2() {
+                    console.log( num );
+                  }
+                  f2();
+                }
+                var num = 456;
+                f1();
+                </code>
+          </pre>
+          <h3 class="color-red">案例分析</h3>
+          <img src="./images/12-作用域/案例分析.png" alt="" />
+          <p>
+            作用域链：采取<span class="color-red bold">就近原则</span
+            >的方式来查找变量最终的值。
+          </p>
+          <img src="./images/12-作用域/代码-案例1.png" alt="" />
+          <img src="./images/12-作用域/案例1-控制台结果.png" alt="" />
+          <h3 class="color-red">案例 2： 结果是几？</h3>
+          <pre>
+            <code>var a = 1;
+                function fn1() {
+                  var a = 2;
+                  var b = '22';
+                  fn2();
+                  function fn2() {
+                    var a = 3;
+                    fn3();
+                    function fn3() {
+                       var a = 4;
+                       console.log(a); //a的值 ?
+                       console.log(b); //b的值 ?
+                    }
+                  }
+                }
+                fn1();
+                </code>
+          </pre>
+          <img src="./images/12-作用域/代码-案例2.png" alt="" />
+          <img src="./images/12-作用域/案例2-控制台.png" alt="" />
+        </section>
+      </div>
+      <hr />
+      <hr />
+      <div class="main-section" id="jsYuJieXi">
+        <header>13-JavaScript 预解析</header>
+        <section id="yuJieXi">
+          <p>目录介绍：</p>
+          <ul>
+            <li>
+              <a href="#yuJieXi"><span class="color-red">预解析</span></a>
+            </li>
+            <li>
+              <a href="#bianLianHanShuYuJieXi"
+                ><span>变量预解析和函数预解析</span></a
+              >
+            </li>
+            <li>
+              <a href="#yuJieXiAnLi"><span>预解析案例</span></a>
+            </li>
+          </ul>
+          <h3>1 问：</h3>
+          <code>console.log(num); // 结果是多少？</code>
+          <p>控制台输出：</p>
+          <img src="./images/13-预解析/控制台-问1.png" alt="" />
+          <h3>2 问：(坑1)</h3>
+          <code>console.log(num); // 结果是多少？<br />var num = 10; ？</code>
+          <img src="./images/13-预解析/代码-问2.png" alt="" />
+          <p>控制台输出：</p>
+          <img src="./images/13-预解析/控制台-问2.png" alt="" />
+          <h3>3 问：</h3>
+          <code
+            >fn();<br />function fn() {<br />  console.log('打印');<br />}
+          </code>
+          <p>控制台输出：</p>
+          <img src="./images/13-预解析/控制台-问3.png" alt="" />
+          <h3>4 问：(坑2)</h3>
+          <code
+            >fn();<br />var fn = function() {<br />  console.log('想不到吧');<br />}
+          </code>
+          <img src="./images/13-预解析/代码-问4.png" alt="" />
+          <p>控制台输出：</p>
+          <img src="./images/13-预解析/控制台-问4.png" alt="" />
+          <p>
+            JavaScript 代码是由浏览器中的 JavaScript 解析器来执行的。JavaScript
+            解析器在运行 JavaScript 代码的时候分为两步：预解析和代码执行。
+          </p>
+          <ul>
+            <li>
+              <span class="color-red bold">预解析：</span>在当前作用域下, JS
+              代码执行之前，浏览器会默认把带有 var 和 function
+              声明的变量在内存中进行提前声明或者定义。
+            </li>
+            <li>
+              <span class="color-red bold">代码执行： </span
+              >从上到下执行JS语句。
+            </li>
+          </ul>
+          <p>
+            预解析只会发生在通过 var 定义的变量和 function
+            上。学习预解析能够让我们知道为什么在变量声明之前访问变量的值是
+            undefined，为什么在函数声明之前就可以调用函数。
+          </p>
+          <img src="./images/13-预解析/pink老师记录.png" alt="" />
+        </section>
+        <section id="bianLianHanShuYuJieXi">
+          <p>目录介绍：</p>
+          <ul>
+            <li>
+              <a href="#yuJieXi"><span>预解析</span></a>
+            </li>
+            <li>
+              <a href="#bianLianHanShuYuJieXi"
+                ><span class="color-red">变量预解析和函数预解析</span></a
+              >
+            </li>
+            <li>
+              <a href="#yuJieXiAnLi"><span>预解析案例</span></a>
+            </li>
+          </ul>
+          <h1>2. 变量预解析和函数预解析</h1>
+          <h2>2.1 变量预解析（变量提升）</h2>
+          <p>预解析也叫做变量、函数提升。</p>
+          <p>
+            <span class="color-red bold">变量提升： </span
+            >变量的声明会被提升到<span class="color-red">当前作用域</span
+            >的最上面，变量的赋值不会提升。
+          </p>
+          <code
+            >console.log(num); // 结果是多少？<br />var num = 10;  // ？
+          </code>
+          <h2>2.2 函数预解析（函数提升）</h2>
+          <p>
+            <span class="color-red bold">函数提升： </span
+            >函数的声明会被提升到<span class="color-red">当前作用域的</span
+            >最上面，但是不会调用函数。
+          </p>
+          <pre><code>fn();
+              function fn() {
+                console.log('打印');
+              }</code>
+          </pre>
+          <h2>2.3 解决函数表达式声明调用问题</h2>
+          <pre><code>fn();
+              var  fn = function() {
+                console.log('想不到吧');
+              }
+              </code>
+          </pre>
+          <h3 class="color-red">练习： 结果是几？</h3>
+          <pre><code>// 练习
+              alert(a);
+              var a = 1;
+              alert(a)
+              function a(){
+                return false;
+              }</code></pre>
+        </section>
+        <hr />
+        <section id="yuJieXiAnLi">
+          <p>目录介绍：</p>
+          <ul>
+            <li>
+              <a href="#yuJieXi"><span>预解析</span></a>
+            </li>
+            <li>
+              <a href="#bianLianHanShuYuJieXi"
+                ><span>变量预解析和函数预解析</span></a
+              >
+            </li>
+            <li>
+              <a href="#yuJieXiAnLi"
+                ><span class="color-red">预解析案例</span></a
+              >
+            </li>
+          </ul>
+          <h1>3. 预解析案例</h1>
+          <h3 class="color-red">案例 1： 结果是几？</h3>
+          <pre><code>// 案例1
+                var num = 10;
+                fun();
+                function fun() {
+                  console.log(num);
+                  var num = 20;
+                }</code></pre>
+          <img src="./images/13-预解析/代码-案例1.png" alt="" />
+          <p>控制台输出：</p>
+          <img src="./images/13-预解析/案例一-控制台.png" alt="" />
+          <h3 class="color-red">案例 2： 结果是几？</h3>
+          <pre><code>// 案例2
+              var num = 10;
+              function fn(){
+                console.log(num);
+                var num = 20;
+                console.log(num);
+              } 
+              fn();</code></pre>
+          <img src="./images/13-预解析/代码-案例2.png" alt="" />
+          <p>控制台输出：</p>
+          <img src="./images/13-预解析/控制台-案例2.png" alt="" />
+          <h3 class="color-red">案例 3： 结果是几？</h3>
+          <pre><code>// 案例3
+                  var a = 18;
+                  f1();
+                  function f1() {
+                   var b = 9;
+                   console.log(a);
+                   console.log(b);
+                   var a = '123';
+                  }</code></pre>
+          <img src="./images/13-预解析/代码-案例3.png" alt="" />
+          <p>控制台输出：</p>
+          <img src="./images/13-预解析/控制台-案例3.png" alt="" />
+          <h3 class="color-red" id="yuJieXiAnLi-4">案例 4： 结果是几？</h3>
+          <pre><code>// 案例4
+                  f1();
+                  console.log(c);
+                  console.log(b);
+                  console.log(a);
+                  function f1() {
+                   var a = b = c = 9;
+                   console.log(a);
+                   console.log(b);
+                   console.log(c);
+                  }</code></pre>
+          <img src="./images/13-预解析/代码-案例4.png" alt="" />
+          <p>控制台输出：</p>
+          <img src="./images/13-预解析/控制台-案例4.png" alt="" />
+        </section>
+      </div>
       <section class="main-section" id="Reference">
         <header>14</header>
       </section>
