--- a/index.html
+++ b/index.html
@@ -4796,6 +4796,7 @@
           </ul>
           <h3>1 问：</h3>
           <code>console.log(num); // 结果是多少？</code>
+          <img src="./images/13-预解析/代码-问1.png" alt="" />
           <p>控制台输出：</p>
           <img src="./images/13-预解析/控制台-问1.png" alt="" />
           <h3>2 问：(坑1)</h3>
@@ -4805,8 +4806,9 @@
           <img src="./images/13-预解析/控制台-问2.png" alt="" />
           <h3>3 问：</h3>
           <code
-            >fn();<br />function fn() {<br />  console.log('打印');<br />}
+            >fn();<br />function fn() {<br />  console.log('11');<br />}
           </code>
+          <img src="./images/13-预解析/代码-问3.png" alt="" />
           <p>控制台输出：</p>
           <img src="./images/13-预解析/控制台-问3.png" alt="" />
           <h3>4 问：(坑2)</h3>
