--- a/index.html
+++ b/index.html
@@ -6951,7 +6951,7 @@
           </ul>
           <p>
             <img
-              src="C:\Users\李大伟\Desktop\js-note\images\14-对象\2.4-汽车.png"
+              src="./images/14-对象/2.4-汽车.png"
               referrerpolicy="no-referrer"
               alt="2.4-汽车"
             />
