--- a/index.html
+++ b/index.html
@@ -1613,6 +1613,9 @@
         </li>
         <li><a class="nav-link" href="#jsObject">14-对象-object</a></li>
         <li><a class="nav-link" href="#jsLeiZhiObject">15-内置对象</a></li>
+        <li>
+          <a class="nav-link" href="#jsJianDanHeFuza">16-简单类型与复杂类型</a>
+        </li>
       </ul>
     </nav>
     <main id="main-doc">
@@ -8107,6 +8110,326 @@
           </ul>
         </section>
         <br />
+      </div>
+      <hr />
+      <hr />
+      <div id="jsJianDanHeFuza">
+        <header>15-JavaScript 简单类型与复杂类型</header>
+        <!-- 1简单类型与复杂类型 -->
+        <section id="jianDanYuFuZa">
+          <p>目录介绍：</p>
+          <ul>
+            <li>
+              <a href="#jianDanYuFuZa"
+                ><span class="color-red">简单类型与复杂类型</span></a
+              >
+            </li>
+            <li>
+              <a href="#duiHeZan"><span>堆和栈</span></a>
+            </li>
+            <li>
+              <a href="#jianDanLeiChun"><span>简单类型的内存分配</span></a>
+            </li>
+            <li>
+              <a href="#fuZaLeiChun"><span>复杂类型的内存分配</span></a>
+            </li>
+            <li>
+              <a href="#jianDanLeiXingChuanChan"><span>简单类型传参</span></a>
+            </li>
+            <li>
+              <a href="#fuZaLeiXingChuanChan"><span>复杂类型传参</span></a>
+            </li>
+          </ul>
+          <h1 id="1-简单类型与复杂类型"><span>1. 简单类型与复杂类型</span></h1>
+          <p>
+            <span>简单类型又叫做基本数据类型或者</span
+            ><font color="red"><span>值类型</span></font
+            ><span>，复杂类型又叫做</span
+            ><font color="red"><span>引用类型</span></font
+            ><span>。</span>
+          </p>
+          <ul>
+            <li>
+              <span
+                >值类型：简单数据类型/基本数据类型，在存储时变量中存储的是值本身，因此叫做值类型</span
+              ><br /><span>string ，number，boolean，undefined，null</span>
+            </li>
+            <li>
+              <span
+                >引用类型：复杂数据类型，在存储时变量中存储的仅仅是地址（引用），因此叫做引用数据类型</span
+              ><br /><span
+                >通过 new 关键字创建的对象（系统对象、自定义对象），如
+                Object、Array、Date等</span
+              >
+            </li>
+          </ul>
+        </section>
+        <hr />
+        <!-- 2-堆和栈 -->
+        <section id="duiHeZan">
+          <p>目录介绍：</p>
+          <ul>
+            <li>
+              <a href="#jianDanYuFuZa"><span>简单类型与复杂类型</span></a>
+            </li>
+            <li>
+              <a href="#duiHeZan"><span class="color-red">堆和栈</span></a>
+            </li>
+            <li>
+              <a href="#jianDanLeiChun"><span>简单类型的内存分配</span></a>
+            </li>
+            <li>
+              <a href="#fuZaLeiChun"><span>复杂类型的内存分配</span></a>
+            </li>
+            <li>
+              <a href="#jianDanLeiXingChuanChan"><span>简单类型传参</span></a>
+            </li>
+            <li>
+              <a href="#fuZaLeiXingChuanChan"><span>复杂类型传参</span></a>
+            </li>
+          </ul>
+          <h1 id="2-堆和栈"><span>2. 堆和栈</span></h1>
+          <p><span>堆栈空间分配区别：</span></p>
+          <ol start="">
+            <li>
+              <span
+                >栈（操作系统）：由操作系统自动分配释放存放函数的参数值、局部变量的值等。其操作方式类似于数据结构中的栈；</span
+              ><br /><font color="red"
+                ><span>简单数据类型存放到栈里面</span></font
+              >
+            </li>
+            <li>
+              <span
+                >堆（操作系统）：存储复杂类型(对象)，一般由程序员分配释放，若程序员不释放，由垃圾回收机制回收。</span
+              ><br /><font color="red"
+                ><span>复杂数据类型存放到堆里面</span></font
+              >
+            </li>
+          </ol>
+          <p>
+            <img
+              src="images\16-简单与复杂类型\2.堆和栈.png"
+              referrerpolicy="no-referrer"
+              alt="2.堆和栈"
+            />
+          </p>
+          <p>
+            <font color="red"
+              ><strong><span>注意：</span></strong
+              ><span
+                >JavaScript中没有堆栈的概念，通过堆栈的方式，可以让大家更容易理解代码的一些执行方式，便于将来学习其他语言。</span
+              ></font
+            >
+          </p>
+        </section>
+        <hr />
+        <!-- 3简单类型的内存分配 -->
+        <section id="jianDanLeiChun">
+          <p>目录介绍：</p>
+          <ul>
+            <li>
+              <a href="#jianDanYuFuZa"><span>简单类型与复杂类型</span></a>
+            </li>
+            <li>
+              <a href="#duiHeZan"><span>堆和栈</span></a>
+            </li>
+            <li>
+              <a href="#jianDanLeiChun"
+                ><span class="color-red">简单类型的内存分配</span></a
+              >
+            </li>
+            <li>
+              <a href="#fuZaLeiChun"><span>复杂类型的内存分配</span></a>
+            </li>
+            <li>
+              <a href="#jianDanLeiXingChuanChan"><span>简单类型传参</span></a>
+            </li>
+            <li>
+              <a href="#fuZaLeiXingChuanChan"><span>复杂类型传参</span></a>
+            </li>
+          </ul>
+          <h1 id="3-简单类型的内存分配"><span>3. 简单类型的内存分配</span></h1>
+          <ul>
+            <li>
+              <span
+                >值类型（简单数据类型）： string
+                ，number，boolean，undefined，null</span
+              >
+            </li>
+            <li><span>值类型变量的数据直接存放在变量（栈空间）中</span></li>
+          </ul>
+          <p>
+            <img
+              src="images\16-简单与复杂类型\3.简单类型的内存分配.png"
+              referrerpolicy="no-referrer"
+              alt="3.简单类型的内存分配"
+            />
+          </p>
+        </section>
+        <hr />
+        <!-- 4复杂类型的内存分配 -->
+        <section id="fuZaLeiChun">
+          <p>目录介绍：</p>
+          <ul>
+            <li>
+              <a href="#jianDanYuFuZa"><span>简单类型与复杂类型</span></a>
+            </li>
+            <li>
+              <a href="#duiHeZan"><span>堆和栈</span></a>
+            </li>
+            <li>
+              <a href="#jianDanLeiChun"><span>简单类型的内存分配</span></a>
+            </li>
+            <li>
+              <a href="#fuZaLeiChun"
+                ><span class="color-red">复杂类型的内存分配</span></a
+              >
+            </li>
+            <li>
+              <a href="#jianDanLeiXingChuanChan"><span>简单类型传参</span></a>
+            </li>
+            <li>
+              <a href="#fuZaLeiXingChuanChan"><span>复杂类型传参</span></a>
+            </li>
+          </ul>
+          <h1 id="4-复杂类型的内存分配"><span>4. 复杂类型的内存分配</span></h1>
+          <ul>
+            <li>
+              <span
+                >引用类型（复杂数据类型）：通过 new
+                关键字创建的对象（系统对象、自定义对象），如
+                Object、Array、Date等</span
+              >
+            </li>
+            <li>
+              <span
+                >引用类型变量（栈空间）里存放的是地址，真正的对象实例存放在堆空间中</span
+              >
+            </li>
+          </ul>
+          <p>
+            <img
+              src="images\16-简单与复杂类型\4.复杂类型的内存分配.png"
+              referrerpolicy="no-referrer"
+              alt="4.复杂类型的内存分配"
+            />
+          </p>
+        </section>
+        <hr />
+        <!-- 5简单类型传参 -->
+        <section id="jianDanLeiXingChuanChan">
+          <p>目录介绍：</p>
+          <ul>
+            <li>
+              <a href="#jianDanYuFuZa"><span>简单类型与复杂类型</span></a>
+            </li>
+            <li>
+              <a href="#duiHeZan"><span>堆和栈</span></a>
+            </li>
+            <li>
+              <a href="#jianDanLeiChun"><span>简单类型的内存分配</span></a>
+            </li>
+            <li>
+              <a href="#fuZaLeiChun"><span>复杂类型的内存分配</span></a>
+            </li>
+            <li>
+              <a href="#jianDanLeiXingChuanChan"
+                ><span class="color-red">简单类型传参</span></a
+              >
+            </li>
+            <li>
+              <a href="#fuZaLeiXingChuanChan"><span>复杂类型传参</span></a>
+            </li>
+          </ul>
+          <h1 id="5-简单类型传参"><span>5. 简单类型传参</span></h1>
+          <p>
+            <span
+              >函数的形参也可以看做是一个变量，当我们把一个值类型变量作为参数传给函数的形参时，其实是把变量在栈空间里的值复制了一份给形参，那么在方法内部对形参做任何修改，都不会影响到的外部变量。</span
+            >
+          </p>
+          <pre
+            class="md-fences md-end-block ty-contain-cm modeLoaded"
+            spellcheck="false"
+            lang="javascript"
+          ><div class="CodeMirror cm-s-inner cm-s-null-scroll CodeMirror-wrap" lang="javascript"><div style="overflow: hidden; position: relative; width: 3px; height: 0px; top: 9.52344px; left: 8px;"><textarea autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="0" style="position: absolute; bottom: -1em; padding: 0px; width: 1000px; height: 1em; outline: none;"></textarea></div><div class="CodeMirror-scrollbar-filler" cm-not-content="true"></div><div class="CodeMirror-gutter-filler" cm-not-content="true"></div><div class="CodeMirror-scroll" tabindex="-1"><div class="CodeMirror-sizer" style="margin-left: 0px; margin-bottom: 0px; border-right-width: 0px; padding-right: 0px; padding-bottom: 0px;"><div style="position: relative; top: 0px;"><div class="CodeMirror-lines" role="presentation"><div role="presentation" style="position: relative; outline: none;"><div class="CodeMirror-measure"></div><div class="CodeMirror-measure"></div><div style="position: relative; z-index: 1;"></div><div class="CodeMirror-code" role="presentation" style=""><div class="CodeMirror-activeline" style="position: relative;"><div class="CodeMirror-activeline-background CodeMirror-linebackground"></div><div class="CodeMirror-gutter-background CodeMirror-activeline-gutter" style="left: 0px; width: 0px;"></div><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span class="cm-keyword">function</span> <span class="cm-def">fn</span>(<span class="cm-def">a</span>) {</span></pre></div><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-variable-2">a</span><span class="cm-operator">++</span>;</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-variable">console</span>.<span class="cm-property">log</span>(<span class="cm-variable-2">a</span>); </span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;">}</span></pre><div class="" style="position: relative;"><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span class="cm-keyword">var</span> <span class="cm-def">x</span> <span class="cm-operator">=</span> <span class="cm-number">10</span>;</span></pre></div><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span class="cm-variable">fn</span>(<span class="cm-variable">x</span>);</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span class="cm-variable">console</span>.<span class="cm-property">log</span>(<span class="cm-variable">x</span>)<span class="cm-variable">；</span></span></pre></div></div></div></div></div><div style="position: absolute; height: 0px; width: 1px; border-bottom: 0px solid transparent; top: 161px;"></div><div class="CodeMirror-gutters" style="display: none; height: 161px;"></div></div></div></pre>
+          <p>
+            <img
+              src="images\16-简单与复杂类型\简单数据类型传参.png"
+              referrerpolicy="no-referrer"
+              alt="简单数据类型传参"
+            />
+          </p>
+          <p>
+            <img
+              src="images\16-简单与复杂类型\代码-简单数据类型.png"
+              referrerpolicy="no-referrer"
+              alt="代码-简单数据类型"
+            /><img
+              src="images\16-简单与复杂类型\控制台输出-简单数据类型.png"
+              referrerpolicy="no-referrer"
+              alt="控制台输出-简单数据类型"
+            />
+          </p>
+        </section>
+        <hr />
+        <!-- 6复杂类型传参 -->
+        <section id="fuZaLeiXingChuanChan">
+          <p>目录介绍：</p>
+          <ul>
+            <li>
+              <a href="#jianDanYuFuZa"><span>简单类型与复杂类型</span></a>
+            </li>
+            <li>
+              <a href="#duiHeZan"><span>堆和栈</span></a>
+            </li>
+            <li>
+              <a href="#jianDanLeiChun"><span>简单类型的内存分配</span></a>
+            </li>
+            <li>
+              <a href="#fuZaLeiChun"><span>复杂类型的内存分配</span></a>
+            </li>
+            <li>
+              <a href="#jianDanLeiXingChuanChan"><span>简单类型传参</span></a>
+            </li>
+            <li>
+              <a href="#fuZaLeiXingChuanChan"
+                ><span class="color-red">复杂类型传参</span></a
+              >
+            </li>
+          </ul>
+          <h1>6. 复杂类型传参</h1>
+          <p>
+            <span
+              >函数的形参也可以看做是一个变量，当我们把引用类型变量传给形参时，其实是把变量在栈空间里保存的堆地址复制给了形参，形参和实参其实保存的是同一个堆地址，所以操作的是同一个对象。</span
+            >
+          </p>
+          <pre
+            class="md-fences md-end-block ty-contain-cm modeLoaded"
+            spellcheck="false"
+            lang="javascript"
+          ><div class="CodeMirror cm-s-inner cm-s-null-scroll CodeMirror-wrap" lang="javascript"><div style="overflow: hidden; position: relative; width: 3px; height: 0px; top: 9.52344px; left: 8px;"><textarea autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="0" style="position: absolute; bottom: -1em; padding: 0px; width: 1000px; height: 1em; outline: none;"></textarea></div><div class="CodeMirror-scrollbar-filler" cm-not-content="true"></div><div class="CodeMirror-gutter-filler" cm-not-content="true"></div><div class="CodeMirror-scroll" tabindex="-1"><div class="CodeMirror-sizer" style="margin-left: 0px; margin-bottom: 0px; border-right-width: 0px; padding-right: 0px; padding-bottom: 0px;"><div style="position: relative; top: 0px;"><div class="CodeMirror-lines" role="presentation"><div role="presentation" style="position: relative; outline: none;"><div class="CodeMirror-measure"><pre><span>xxxxxxxxxx</span></pre></div><div class="CodeMirror-measure"></div><div style="position: relative; z-index: 1;"></div><div class="CodeMirror-code" role="presentation" style=""><div class="CodeMirror-activeline" style="position: relative;"><div class="CodeMirror-activeline-background CodeMirror-linebackground"></div><div class="CodeMirror-gutter-background CodeMirror-activeline-gutter" style="left: 0px; width: 0px;"></div><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span class="cm-keyword">function</span> <span class="cm-def">Person</span>(<span class="cm-def">name</span>) {</span></pre></div><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-keyword">this</span>.<span class="cm-property">name</span> <span class="cm-operator">=</span> <span class="cm-variable-2">name</span>;</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;">}</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span class="cm-keyword">function</span> <span class="cm-def">f1</span>(<span class="cm-def">x</span>) { <span class="cm-comment">// x = p</span></span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-variable">console</span>.<span class="cm-property">log</span>(<span class="cm-variable-2">x</span>.<span class="cm-property">name</span>); <span class="cm-comment">// 2. 这个输出什么 ? &nbsp; &nbsp;</span></span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-variable-2">x</span>.<span class="cm-property">name</span> <span class="cm-operator">=</span> <span class="cm-string">"张学友"</span>;</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"> &nbsp; &nbsp;<span class="cm-variable">console</span>.<span class="cm-property">log</span>(<span class="cm-variable-2">x</span>.<span class="cm-property">name</span>); <span class="cm-comment">// 3. 这个输出什么 ? &nbsp; &nbsp;</span></span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;">}</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span class="cm-keyword">var</span> <span class="cm-def">p</span> <span class="cm-operator">=</span> <span class="cm-keyword">new</span> <span class="cm-variable">Person</span>(<span class="cm-string">"刘德华"</span>);</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span class="cm-variable">console</span>.<span class="cm-property">log</span>(<span class="cm-variable">p</span>.<span class="cm-property">name</span>); &nbsp; &nbsp;<span class="cm-comment">// 1. 这个输出什么 ? &nbsp; </span></span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span class="cm-variable">f1</span>(<span class="cm-variable">p</span>);</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span class="cm-variable">console</span>.<span class="cm-property">log</span>(<span class="cm-variable">p</span>.<span class="cm-property">name</span>); &nbsp; &nbsp;<span class="cm-comment">// 4. 这个输出什么 ? &nbsp;</span></span></pre></div></div></div></div></div><div style="position: absolute; height: 0px; width: 1px; border-bottom: 0px solid transparent; top: 277px;"></div><div class="CodeMirror-gutters" style="display: none; height: 277px;"></div></div></div></pre>
+          <p>
+            <img
+              src="images\16-简单与复杂类型\复杂数据类型传参.png"
+              referrerpolicy="no-referrer"
+              alt="复杂数据类型传参"
+            />
+          </p>
+          <p>
+            <img
+              src="images\16-简单与复杂类型\代码-复杂数据类型.png"
+              referrerpolicy="no-referrer"
+              alt="代码-复杂数据类型"
+            />
+          </p>
+          <p>
+            <img
+              src="images\16-简单与复杂类型\控制台输出-复杂数据类型.png"
+              referrerpolicy="no-referrer"
+              alt="控制台输出-复杂数据类型"
+            />
+          </p>
+        </section>
       </div>
     </main>
   </body>
