--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="styles-js.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DavyLee's notes</title>
+    <title>js-note</title>
     <!-- <script>
       var question = prompt("这个笔记是谁写的？");
       while (question !== "李伟杰") {
