--- a/css-note.html
+++ b/css-note.html
@@ -668,7 +668,7 @@
       
       
       </style>
-      <title>CSS/CSS3/HTML5</title>
+      <title>css-note</title>
     </head>
   <body>
     <nav id="navbar">
