--- a/foundation.html
+++ b/foundation.html
@@ -1568,8 +1568,8 @@
       </ul>
       <!-- HTML 基础 end -->
 
-      <!-- CSS/CSS3/HTML5 start -->
-      <header>CSS/CSS3/HTML5</header>
+      <!-- CSS/HTML5/CSS3 start -->
+      <header>CSS/HTML5/CSS3</header>
       <ul>
         <li>
           <a class="nav-link" href="#Introduction"
@@ -1601,7 +1601,7 @@
         </li>
         <li><a href="#pc_pingyougou">PC端 品优购项目</a></li>
       </ul>
-      <!-- CSS/CSS3/HTML5 end -->
+      <!-- CSS/HTML5/CSS3 end -->
     </nav>
     <main id="main-doc">
       <!-- HTML基础 start -->
