--- a/foundation.html
+++ b/foundation.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">  -->
     <link rel="stylesheet" href="styles-all.css" />
+    <link rel="shortcut icon" href="tutu.ico" type="image/x-icon">
     <title>HTML/CSS/HTML5/CSS3-note</title>
     <style type="text/css">
       html {
